# hypergraph-decomposition

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: actions.yaml
benchmarks/: surface_code.ipynb  trying_to_improve_decomposition_performance.ipynb
hyper_decom/: __init__.py  decomposition.py  detector_error_model.py  stim_tools.py  util.py
hyperedge_decomposition/: detector_error_model.py  stim_tools.py
hypergraph_decomposition/: __init__.py  decomposition.py  detector_error_model.py  stim_tools.py
src/: __init__.py  hypergraph_decomposition.py
studies/: accepting_stim_decomposition.ipynb  decompositions_with_opposite_logical_effect.ipynb
studies/profiling_runtime_performance/: profile_decompose_dem.py  profile_run
tests/: test_decomposition.py  test_detector_error_model.py  test_stim_tools.py  test_tests.py  test_util.py
