[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "hyperedge-decomposition" 
version = "0.0.1" 
description = "Hyperedge decomposition for Detector Error Models"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["qec", "hyperedge", "decomposition"]
authors = [
  {name = "Marc Serra Peralta", email = "marcserraperalta@gmail.com" } 
]
maintainers = [
  {name = "Marc Serra Peralta", email = "marcserraperalta@gmail.com" } 
]
dependencies = [
  "numpy",
  "stim",
  "pymatching",
]
[project.optional-dependencies] # Optional
dev = ["pytest", "pip-tools"]

